force-app/main/default/objects/Candidacy__c/Candidacy__c.object-meta.xml
<CustomObject>
    <label>Candidacy Determination</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Candidacy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidacy Determinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>