force-app/main/default/objects/Candidacy__c/fields/Candidacy_Determination__c.field-meta.xml
<CustomField>
    <fullName>Candidacy_Determination__c</fullName>
    <label>Candidacy Determination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>