force-app/main/default/objects/Candidacy__c/fields/Child_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Candidacy Determinations</relationshipLabel>
    <relationshipName>Candidacy</relationshipName>
    <type>Lookup</type>
</CustomField>