force-app/main/default/objects/Candidacy__c/fields/Date_of_Candidacy_Determination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Candidacy_Determination__c</fullName>
    <label>Date of Candidacy Determination</label>
    <type>Date</type>
</CustomField>