force-app/main/default/objects/Candidacy__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Plan</label>
    <referenceTo>Service_Plan__c</referenceTo>
    <relationshipName>Candidacy</relationshipName>
    <type>Lookup</type>
</CustomField>